Fix homepage spacing on mobile.

--- a/tools/scss/styles.scss
+++ b/tools/scss/styles.scss
@@ -755,6 +755,18 @@ body.page-home {
             }
         }
     }
+
+    main {
+        section {
+            .container {
+                .col {
+                    @include phone {
+                        padding-top: 35px;
+                    }
+                }
+            }
+        }
+    }
 }
 
 // Misiune, viziune, valori
